<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.opencloudb.mycat</groupId>
	<artifactId>Mycat-server</artifactId>
	<version>1.0GA</version>
	<packaging>jar</packaging>
	<name>Mycat-server</name>
	<description>The project of Mycat-server</description>
	<url>http://org.opencloudb</url>

	<properties>
		<app.encoding>UTF-8</app.encoding>
		<!-- maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format> 
			<buildNumber>${maven.build.timestamp}</buildNumber -->
	</properties>
	<scm>
		<connection>scm:svn:http://code.taobao.org/svn/openclouddb/trunk</connection>
		<developerConnection>scm:svn:http://code.taobao.org/svn/openclouddb/trunk</developerConnection>
		<url>http://code.taobao.org/svn/openclouddb/trunk</url>
	</scm>
	<dependencies>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.16</version>
		</dependency>
		<dependency>
			<groupId>c3p0</groupId>
			<artifactId>c3p0</artifactId>
			<version>0.9.1.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.27</version>
			<scope>test</scope>

		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jsr166-mirror</groupId>
			<artifactId>jsr166y</artifactId>
			<version>1.7.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>



	<issueManagement>
		<system>JIRA</system>
		<url>http://org.opencloudb</url>
	</issueManagement>

	<build>
		<!-- finalName>${artifactId}-${version}-${buildNumber}</finalName -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**/.svn/**</exclude>
				</excludes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<excludes>
					<exclude>**/.svn/**</exclude>
				</excludes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>${app.encoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<configuration>
					<encoding>${app.encoding}</encoding>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/.svn/**</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
						<!-- configuration> <finalName>${project.build.finalName}-${buildNumber}</finalName> 
							</configuration -->
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<sourceExcludes>
						<sourceExclude>**/.svn/**</sourceExclude>
					</sourceExcludes>
					<downloadSources>true</downloadSources>
					<outputDirectory>classes</outputDirectory>
					<additionalConfig>
						<file>
							<name>.settings/org.eclipse.core.resources.prefs</name>
							<content>  
               <![CDATA[eclipse.preferences.version=1${line.separator}encoding/<project>=${app.encoding}${line.separator}]]>
							</content>
						</file>
					</additionalConfig>
				</configuration>
			</plugin>

			<!-- -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.7</version>
				<configuration>
					<configurationDirectory>conf</configurationDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
					<repositoryLayout>flat</repositoryLayout>
					<useWildcardClassPath>true</useWildcardClassPath>

					<daemons>
						<daemon>

							<id>mycat</id>
							<mainClass>org.opencloudb.MycatStartup</mainClass>
							<commandLineArguments>
								<commandLineArgument>start</commandLineArgument>
							</commandLineArguments>
							<platforms>
								<platform>jsw</platform>
							</platforms>
							<jvmSettings>
								<!-- 启动内存配置 -->
								<initialMemorySize>2048</initialMemorySize>
								<maxMemorySize>2048</maxMemorySize>
								<maxStackSize>128</maxStackSize>
								<systemProperties>
									<systemProperty>MYCAT_HOME=.</systemProperty>
								</systemProperties>
								<extraArguments>
									<extraArgument>-server </extraArgument>
									<extraArgument>-XX:MaxPermSize=64M</extraArgument>
									<extraArgument>-XX:+AggressiveOpts</extraArgument>
									<extraArgument>-XX:MaxDirectMemorySize=2G</extraArgument>
									<!-- 远程JMX -->
									<extraArgument>-Dcom.sun.management.jmxremote </extraArgument>
									<extraArgument>-Dcom.sun.management.jmxremote.port=1984</extraArgument>
									<extraArgument>-Dcom.sun.management.jmxremote.authenticate=false </extraArgument>
									<extraArgument>-Dcom.sun.management.jmxremote.ssl=false </extraArgument>
								</extraArguments>
							</jvmSettings>
							<generatorConfigurations>
								<generatorConfiguration>
									<generator>jsw</generator>
									<includes>
										<include>linux-x86-32</include>
										<include>linux-x86-64</include>
										<include>linux-ppc-64</include>
										<include>macosx-x86-universal-32</include>
										<include>macosx-universal-32</include>
										<include>macosx-universal-64</include>
										<include>windows-x86-32</include>
										<include>windows-x86-64</include>
									</includes>
									<configuration>
										<property>
											<name>configuration.directory.in.classpath.first</name>
											<value>conf</value>
										</property>
										<property>
											<name>set.default.REPO_DIR</name>
											<value>lib</value>
										</property>
										<property>
											<name>wrapper.logfile</name>
											<value>logs/wrapper.log</value>
										</property>
									</configuration>

								</generatorConfiguration>
							</generatorConfigurations>
						</daemon>
					</daemons>
				</configuration>
				<executions>
					<execution>
						<id>generate-jsw</id>
						<phase>package</phase>
						<goals>
							<goal>generate-daemons</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptor>src/main/assembly/assembly.xml</descriptor>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.2</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<format>{0,date,yyyyMMdd}-{1}</format>
					<items>
						<item>timestamp</item>
						<item>scmVersion</item>
					</items>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>

					<providerImplementations>
					 <svn>svnkit</svn> 
					 </providerImplementations>

				</configuration>

				<dependencies>
					<dependency>
						<groupId>com.google.code.maven-scm-provider-svnjava</groupId>
						<artifactId>maven-scm-provider-svnjava</artifactId>
						<version>2.0.6</version>
					</dependency>
					<dependency>
						<groupId>org.tmatesoft.svnkit</groupId>
						<artifactId>svnkit</artifactId>
						<version>1.7.8</version>
					</dependency>
				</dependencies>

			</plugin>
		</plugins>
	</build>


</project>